--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dip Color Race</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
 </head>
 <body>
-    <div id="intro">
-        <h1>Welcome to Dip Color Race!</h1>
-        <p>Choose an image, color it, and have fun! Tap below to start.</p>
-        <button id="startButton">Tap to Start</button>
-        <p class="designer-credit">Design by Kofi Fosu | Contact: <a href="mailto:cosmoscoderr@gmail.com">cosmoscoderr@gmail.com</a></p>
+    <div id="intro" class="page">
+        <div class="intro-content">
+            <h1>Welcome to Dip Color Race!</h1>
+            <p>Unleash your creativity by coloring unique outline designs. Tap below to start!</p>
+            <button id="startButton" class="pulsate">Tap to Start</button>
+            <p class="designer-credit">Design by Kofi Fosu | <a href="mailto:cosmoscoderr@gmail.com">cosmoscoderr@gmail.com</a></p>
+        </div>
     </div>
-    <div id="game" style="display:none;">
-        <canvas id="colorCanvas" width="500" height="500"></canvas>
-        <div id="toolbar">
-            <input type="color" id="colorChoice" value="#ff0000">
-            <button onclick="clearCanvas()">Clear Image</button>
-            <button onclick="generateOutline()">Generate Outline</button>
+    <div id="game" class="page" style="display:none;">
+        <div class="game-container">
+            <canvas id="colorCanvas"></canvas>
+            <div id="toolbar">
+                <input type="color" id="colorChoice" value="#ff0000">
+                <button onclick="clearCanvas()">Clear</button>
+                <button onclick="generateOutline()">Generate Outline</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
