--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <!-- Intro Page -->
+  <div id="introPage" class="intro-page">
+    <h1>Welcome to Dip Color Race!</h1>
+    <p>Unleash your creativity and color your world.</p>
+    <button id="startButton" class="pulsating-button">Tap to Start</button>
+  </div>
+
+  <!-- Game Page -->
+  <div id="gamePage" class="game-page hidden">
     <h1>Dip Color Race</h1>
-    <p>Tap to start coloring!</p>
     <div class="game-area">
       <canvas id="drawingCanvas" width="500" height="500"></canvas>
       <div class="color-palette">
@@ -25,6 +32,7 @@
       <button id="clearButton">Clear Image</button>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
