--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <div id="introPage" class="intro-page">
     <h1>Welcome to Dip Color Race!</h1>
     <p>Unleash your creativity with AI-generated outline images. Color them, save them, and share your masterpieces!</p>
+    <div class="info">
+      <p><strong>How it works:</strong></p>
+      <p>1. Tap "Start" to begin.</p>
+      <p>2. Use the color palette to select a color.</p>
+      <p>3. Draw on the canvas to color the outline.</p>
+      <p>4. Generate new outlines or save your artwork.</p>
+      <p>Design by Kofi Fosu | Email: cosmoscoderr@gmail.com</p>
+    </div>
     <button id="startButton" class="pulsating-button">Tap to Start</button>
   </div>
 
@@ -31,6 +39,12 @@
         <div class="color" data-color="orange"></div>
         <div class="color" data-color="black"></div>
         <div class="color" data-color="white"></div>
+      </div>
+
+      <!-- Brush Size -->
+      <div class="brush-size">
+        <label for="brushSize">Brush Size:</label>
+        <input type="range" id="brushSize" min="1" max="20" value="5">
       </div>
 
       <!-- Buttons -->
