--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Dip Color Race</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -27,7 +27,7 @@
     <h1>Dip Color Race</h1>
     <div class="game-area">
       <!-- Canvas for Drawing -->
-      <canvas id="drawingCanvas" width="500" height="500"></canvas>
+      <canvas id="drawingCanvas"></canvas>
 
       <!-- Color Palette -->
       <div class="color-palette">
